# programming-procedural

./: .gitignore  container.c  container.h  diagonal_matrix.c  diagonal_matrix.h  input  lower_triangular_matrix.c  lower_triangular_matrix.h  main.c  makefile  matrix.c  matrix.h  output.txt  print_method.h  square_matrix.c  square_matrix.h
tests/: CMakeLists.txt  container.cpp  container.raw  diagonal_matrix.cpp  diagonal_matrix.raw  lower_triangular_matrix.cpp  lower_triangular_matrix.raw  matrix.cpp  square_matrix.cpp  square_matrix.raw  test_file.cpp
